sigo con la seccion de intro a monadas

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -29,9 +29,8 @@
 \usepackage{sty/prefs}
 \usepackage{enumitem} 				 %itemize setup
 \usepackage{amssymb}
-
-
 \usepackage{amsfonts}
+\usepackage{dsfont}
 
 
 %\newcites{Intro}{Referencias hist\'{o}ricas}
