termino primera parte cap 2

--- a/doc/bib/biblio.bib
+++ b/doc/bib/biblio.bib
@@ -20,3 +20,13 @@
 	volume			= {93},
 	pages			= {55--92},
 	year			= {1991}}
+	
+@article{kock:1970,
+	author			= {Anders Kock},
+	title			= {Strong functors and monoidal monads},
+	journal			= {Archiv der Mathematik},
+	volume 			= {23},
+	pages			= {113--120},
+	year			= {1970}}
+	
+	
