termino subseccion ley de intercambio de monadas concurrentes

--- a/doc/bib/biblio.bib
+++ b/doc/bib/biblio.bib
@@ -29,4 +29,45 @@
 	pages			= {113--120},
 	year			= {1970}}
 	
+@inproceedings{hoare:2011,
+  title 			= {On Locality and the Exchange Law for Concurrent Processes},
+  author 			= {C. A. R. Hoare and Akbar Hussain and Bernhard M{\"o}ller and Peter W. O'Hearn and Rasmus Lerchedahl Petersen and Georg Struth},
+  year 				= {2011},
+  booktitle 		= {CONCUR 2011 - Concurrency Theory - 22nd International Conference, CONCUR 2011, Aachen, Germany, September 6-9, 2011. Proceedings},
+  editor 			= {Joost-Pieter Katoen and Barbara K{\"o}nig},
+  pages 			= {250--264},
+  publisher 		= {Springer},
+  series 			= {Lecture Notes in Computer Science},
+  volume 			= {6901},
+  doi 				= {10.1007/978-3-642-23217-6_17},
+}
+
+@unpublished{rivas:2019,
+  title 			= {Monads with merging},
+  author 			= {Exequiel Rivas and Mauro Jaskelioff},
+  url 				= {https://inria.hal.science/hal-02150199},
+  note		 		= {working paper or preprint},
+  year 				= {2019},
+  month 			= Jun,
+  hal_id 			= {hal-02150199},
+  hal_version		= {v1},
+}
+
+@article{hoare:2009, 
+	title			= {Concurrent Kleene Algebra and its Foundations}, 
+	doi 			= {10.1016/j.jlap.2011.04.005}, 
+	journal			= {The Journal of Logic and Algebraic Programming}, 
+	author			= {Tony Hoare and Bernhard Möller and Georg Struth and Ian Wehrman}, 
+	year			={2011}, 
+	month			={Aug}}
 	
+@article{kozen:1994,
+	title 			= {A Completeness Theorem for Kleene Algebras and the Algebra of Regular Events},
+	journal 		= {Information and Computation},
+	volume 			= {110},
+	number 			= {2},
+	pages 			= {366-390},
+	year 			= {1994},
+	doi 			= {https://doi.org/10.1006/inco.1994.1037},
+	author 			= {D. Kozen},
+}
