--- a/doc/main.tex
+++ b/doc/main.tex
@@ -8,7 +8,7 @@
 \usepackage[resetlabels]{multibib}   %multiple bibliographies
 \usepackage[margin=1.55in]{geometry} %page size
 %\usepackage{cmbright}                %font
-\usepackage{amsthm}                  %theorem styles
+\usepackage{amsthm,thmtools}         %theorem styles
 \usepackage[spanish]{babelbib}       %bibliografía en español
 \usepackage{catchfilebetweentags}    %inclusión de pedazos de código
 \usepackage{url}
