cambio formato + dos modelos + monoide concurrente

--- a/doc/main.tex
+++ b/doc/main.tex
@@ -28,6 +28,7 @@
 \usepackage{sty/unicode}             %unicode characters
 \usepackage{sty/prefs}
 \usepackage{enumitem} 				 %itemize setup
+\setlist{nosep}
 \usepackage{amssymb}
 \usepackage{amsfonts}
 \usepackage{dsfont}
